examples/test/testpolicy17538.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17538
  namespace: namespace174
spec:
  podSelector:
    matchLabels:
      key38: value44
      key0: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value21
          key39: value12
      podSelector:
        matchLabels:
          key40: value21
          key17: value15
